# e3sm

.github/workflows/: hommexx-amdis-tests.yml  hommexx-unit-tests.yml  pyhommexx.yml
components/homme/: CMakeLists.txt
components/homme/cmake/: HommeMacros.cmake  SetCompilerFlags.cmake
components/homme/src/: common_movie_mod.F90  netcdf_io_mod.F90  prim_movie_mod.F90
components/homme/src/preqx_kokkos/: CMakeLists.txt  element_state.F90
components/homme/src/share/: control_mod.F90  element_mod.F90  namelist_mod.F90
components/homme/src/sweqx/: init_mod.F90
components/homme/src/theta-l_kokkos/: CMakeLists.txt  element_state.F90  prim_driver_mod.F90  theta_f2c_mod.F90
components/homme/src/theta-l_kokkos/pyhommexx/: CMakeLists.txt  README.md  pyhommexx.cpp  pyhommexx.hpp  pyhommexx_c2f.hpp  pyhommexx_decl.hpp  pyhommexx_impl.cpp  pyhommexx_mod.F90  pyhommexx_utils.cpp  pyhommexx_utils.hpp
components/homme/src/theta-l_kokkos/pyhommexx/impl/: pyhommexx_functors.cpp  pyhommexx_grid.cpp  pyhommexx_mod.F90  pyhommexx_params.cpp  pyhommexx_session.cpp  pyhommexx_state.cpp  pyhommexx_theta_model.cpp  pyhommexx_utils.hpp
components/homme/test/unit_tests/: CMakeLists.txt  tester.cpp
components/homme/test_execs/: CMakeLists.txt
components/homme/test_execs/preqx_kokkos_ut/: remap_preqx_ut.cpp
components/homme/test_execs/share_kokkos_ut/: CMakeLists.txt  boundary_exchange_ut.cpp  col_ops_ut.cpp  infrastructure_ut.cpp  limiters.cpp  ppm_remap_ut.cpp  sacado_ut.cpp  sphere_op_ml.cpp  sphere_op_sl.cpp
components/homme/test_execs/theta-nlev128-sensitivities/: CMakeLists.txt  namelist.nl  sens_check.py
(+152 files in other folders)
